# diagram2code

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.venv_test/: pyvenv.cfg
d2c-test/: pyvenv.cfg
export/: README_EXPORT.md  generated_program.py
export_bundle/: README_EXPORT.md  generated_program.py  run.sh
export_out/: generated_program.py  graph.json  labels.template.json  render_graph.py  run.ps1
export_test/: README_EXPORT.md  generated_program.py  graph.json  labels.json  render_graph.py  run.ps1
scripts/: ci_verify_benchmark.py  convert_flowlearn.py  probe_minimal_v1.py  train_learned_edge_baseline.py
tests/: make_branching_arrows_fixture.py  make_branching_fixture.py  make_branching_fixture_from_simple.py  test_arrow_direction_diagonal.py  test_benchmark_cli.py  test_benchmark_dataset_integration.py  test_benchmark_dataset_loader.py  test_benchmark_dataset_resolution_wiring.py  test_benchmark_determinism.py  test_benchmark_registry_dataset_resolution.py  test_benchmark_result_schema.py  test_benchmark_run_metadata.py  test_benchmark_sample_source.py  test_cli_bad_input.py  test_cli_benchmark_fetch_missing.py  test_cli_benchmark_info.py  test_cli_benchmark_naive.py  test_cli_benchmark_result_metadata.py  test_cli_benchmark_strict_manifest.py  test_cli_dataset_build_realworld_like.py  test_cli_dataset_build_synthflow.py  test_cli_dataset_commands.py  test_cli_dry_run.py  test_cli_export_bundle_scripts.py  test_cli_export_flag.py  test_cli_labels_flag.py  test_cli_labels_template_flag.py  (+57 more)
(+80 files in other folders)
