[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagram2code"
version = "0.0.1"
description = "Convert simple diagram images into runnable code (matplotlib/graphviz)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kazi Samiul Islam"}]
dependencies = ["opencv-python>=4.8", "numpy>=1.26", "matplotlib>=3.8"]


[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
]

[project.scripts]
diagram2code = "diagram2code.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
